--- a/composer.json
+++ b/composer.json
@@ -1,5 +1,6 @@
 {
     "name": "jimdo/http",
+    "license": "MIT",
     "authors": [
         {
             "name": "Hauke Stange",
@@ -14,13 +15,15 @@
             "email": "tom.stich@jimdo.com"
         }
     ],
-   "autoload": {
+    "require-dev": {
+        "phpunit/phpunit": "^5.4"
+    },
+    "config": {
+       "bin-dir": "scripts"
+    },
+    "autoload": {
         "psr-4": {
           "Jimdo\\Http\\": [ "src/", "tests/" ]
         }
-    },
-    "license": "MIT",
-    "require-dev": {
-        "phpunit/phpunit": "^5.4"
     }
 }
